# cpp-minecraft

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
gamedata/: gameconfig.txt
include/game/: config.hpp  game.hpp  player.hpp  renderer.hpp  shader_program.hpp  window.hpp
include/game/event/: event.hpp  event_handler.hpp  event_util.hpp  key_type.hpp
include/game/shader/: baseshader.hpp  chunkshader.hpp  skyboxshader.hpp  watershader.hpp
include/util/: block_container.hpp  bounding_box.hpp  corner.hpp  direction.hpp  frustumculling.hpp  intersection.hpp  ivec2_map.hpp  log.hpp  math_constants.hpp  mesh.hpp  png_image.hpp  ray.hpp  renderable.hpp  safequeue.hpp  texture_atlas.hpp  timer.hpp  world_util.hpp
include/util/fileio/: fileIO.hpp
include/world/: block.hpp  block_type.hpp  chunk.hpp  chunk_column.hpp  fog.hpp  skybox.hpp  world.hpp
include/world/worldmanager/: worldfileio.hpp  worldgenerator.hpp  worldmanager.hpp
resource/shader/: chunk_fragment.glsl  chunk_vertex.glsl  fragment.glsl  skybox_fragment.glsl  skybox_vertex.glsl  vertex.glsl  water_fragment.glsl  water_vertex.glsl
src/: main.cpp
src/game/: game.cpp  player.cpp  renderer.cpp  shader_program.cpp  window.cpp
src/game/shader/: baseshader.cpp  chunkshader.cpp  skyboxshader.cpp  watershader.cpp
src/util/: block_container.cpp  bounding_box.cpp  frustumculling.cpp  mesh.cpp  png_image.cpp  texture_atlas.cpp
src/util/fileio/: fileIO.cpp
src/world/: block.cpp  chunk.cpp  chunk_column.cpp  skybox.cpp  temp  world.cpp
src/world/worldmanager/: worldfileio.cpp  worldgenerator.cpp  (+1 more)
